--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -8,7 +8,7 @@
     <body>
         <canvas id="viewport" width="800" height="600"></canvas>
 
-        <script src="js/lib/jquery-1.6.1.min.js"> </script>
+        <script src="js/lib/jquery.js"> </script>
         <script src="js/lib/arbor.js"> </script>
         <script src="js/main.js"> </script>
     </body>
