--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -1,15 +1,17 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+﻿<html>
     <head>
-        <meta charset="utf-8" />
         <title></title>
+        <link href="css/main.css" rel="stylesheet" />
+        <link href="css/jstree.css" rel="stylesheet" />
     </head>
     <body>
-        <canvas id="viewport" width="800" height="600"></canvas>
-
+        
+        <canvas id="viewport"></canvas>
+        <div id="typetree"></div>   
+     
         <script src="js/lib/jquery.js"> </script>
         <script src="js/lib/arbor.js"> </script>
+        <script src="js/lib/jstree.js"></script>
         <script src="js/main.js"> </script>
     </body>
 </html>
