Graph expand and collapse according to tree. dependencies are still missing.

--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
     <head>
-        <title></title>
+        <title>Code Gravity</title>
         <link href="css/main.css" rel="stylesheet" />
         <link href="css/jstree.css" rel="stylesheet" />
     </head>
