Javascript refactoring and cleanup.

--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -13,5 +13,6 @@
     <script src="js/lib/jquery.js"> </script> 
     <script src="js/lib/jstree.js"> </script>
     <script src="js/main.js"> </script>
+    <script src="js/vertex.js"> </script>
 
 </html>
