Added search, fixed issue with scrolling.

--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -6,7 +6,15 @@
     </head>
     <body>
         <div id="viewport"></div>
-        <div id="typetree"></div>   
+        <div id="right">
+            <div id="toolbar">
+                <img src="/css/s.png"/>
+                <input id="searchbar"/>
+            </div>
+            <div id="typetree">
+            
+            </div>
+        </div>
     </body>   
     
     <script src="js/lib/d3.min.js"> </script>
