--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -20,6 +20,7 @@
     <script src="js/lib/d3.min.js"> </script>
     <script src="js/lib/jquery.js"> </script> 
     <script src="js/lib/jstree.js"> </script>
+    <script src="js/lib/jquery.panzoom.min.js"></script>
     <script src="js/main.js"> </script>
     <script src="js/vertex.js"> </script>
 
