Fixed issue with nested classes

--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <div id="middle">
-            <h2>Some hints while your assembly is beeng analyzed</h2>
+            <h2>Your assembly is beeng analyzed</h2>
             <div id="progress">1%</div>
             <p>You will be redirected automatically when dependency graph is complete.</p>
             <p>You can still click <a href="main.html"><img src="css/go-icon.png"/></a> to continue anyway and see the incomplete dependency graph.</p>
-            <p>You can reload the graph (F5) anytime, newly discovered dependencies will occur on the graph.</p>
-            <p>Use mouse wheel to zoom and drag to pan.</p>
+            <p>You can reload the graph (F5) anytime, newly discovered dependencies will show up.</p>
+            <p>Use mouse wheel to zoom, drag to pan.</p>
             <p>You can also:</p>
             <ul>
                 <li>mouse over nodes</li>
