Improved tooltip on mouse over

--- a/nsplit/html/main.html
+++ b/nsplit/html/main.html
@@ -15,12 +15,16 @@
             
             </div>
         </div>
+        <div id="toolTip" class="tooltip" style="opacity: 0;">
+            <div id="toolTipHead" class="tooltiphead">Hello</div>
+            <div id="toolTipBody" class="tooltipbody">World</div>
+        </div>
     </body>   
     
     <script src="js/lib/d3.min.js"> </script>
     <script src="js/lib/jquery.js"> </script> 
     <script src="js/lib/jstree.js"> </script>
-    <script src="js/lib/jquery.panzoom.min.js"></script>
+    <script src="js/lib/jquery.panzoom.min.js"> </script>
     <script src="js/main.js"> </script>
     <script src="js/vertex.js"> </script>
 
