Fixed - GOTO GRAPH was unclickable

--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -58,7 +58,7 @@
                     setTimeout(getPorgress, 100);
                     $("#goto")
                         .removeAttr("disabled")
-                        .on("clilc", goToGraph);
+                        .on("click", goToGraph);
                 }
             });
         }
