--- a/nsplit/readme.html
+++ b/nsplit/readme.html
@@ -6,7 +6,7 @@
         <title>Upsss!</title>
     </head>
     <body>
-        <h2>Upsss! It looks like I am not allowed to start a HTTP server here.</h2>
+        <h2>Upsss! It looks like I am not allowed to start an HTTP server here.</h2>
         <p>
             This application listens to http://localhost:8080/. By default, listening at a particular HTTP address requires administrator privileges. 
         </p>
