Implemented browser compatibility warning. Minor usability improvements.

--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <div id="middle">
+            <div id="warning">
+                This browser do not support SVG.<br/>
+                See: <a href="http://caniuse.com/svg">SVG browser compatibility table</a>
+            </div>
             <h3>Code Gravity</h3>
             <p>
                 Analyze your assembly: 
