--- a/nsplit/html/main.html
+++ b/nsplit/html/main.html
@@ -7,17 +7,12 @@
     <body>
         <div id="viewport"></div>
         <div id="right">
-            <div id="toolbar">
-                <img src="/css/s.png"/>
-                <input id="searchbar"/>
-            </div>
-            <div id="typetree">
-            
-            </div>
+            [==] <a href="index.html">ANALYZE OTHER ASSEMBLY</a>
+            <div id="typetree"></div>
         </div>
         <div id="toolTip" class="tooltip" style="opacity: 0;">
-            <div id="toolTipHead" class="tooltiphead">Hello</div>
-            <div id="toolTipBody" class="tooltipbody">World</div>
+            <div id="toolTipHead" class="tooltiphead"></div>
+            <div id="toolTipBody" class="tooltipbody"></div>
         </div>
     </body>   
     
