Fixed initial race condition on startup

--- a/nsplit/html/main.html
+++ b/nsplit/html/main.html
@@ -2,7 +2,7 @@
     <head>
         <title>Code Gravity</title>
         <link href="css/main.css" rel="stylesheet" />
-        <link href="css/jstree.css" rel="stylesheet" />
+        <link href="css/jstree/style.min.css" rel="stylesheet" />
     </head>
     <body>
         <div id="viewport"></div>
