Design adjustments. BW icons.

--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -1,6 +1,7 @@
 ﻿<html>
     <head>
         <title>Code Gravity</title>
+        <link rel="shortcut icon" href="/img/graph.ico" />
         <link href="css/index.css" rel="stylesheet" />
     </head>
     <body>
