--- a/nsplit/html/main.html
+++ b/nsplit/html/main.html
@@ -1,13 +1,14 @@
 ﻿<html>
     <head>
         <title>Code Gravity</title>
+        <link rel="shortcut icon" href="/img/graph.ico" />
         <link href="css/main.css" rel="stylesheet" />
         <link href="css/jstree/style.min.css" rel="stylesheet" />
     </head>
     <body>
         <div id="viewport"></div>
         <div id="right">
-            [==] <a href="index.html">ANALYZE OTHER ASSEMBLY</a>
+            <img id="imgAssembly" src="/img/assembly.png" height="16" width="16"/> <a href="index.html">ANALYZE ANOTHER ASSEMBLY</a>
             <div id="typetree"></div>
         </div>
         <div id="toolTip" class="tooltip" style="opacity: 0;">
