--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -11,22 +11,43 @@
                 See: <a href="http://caniuse.com/svg">SVG browser compatibility table</a>
             </div>
             <h3>Code Gravity</h3>
-            <p>
-                Analyze your assembly: 
-                <input id="assembly" type="text" placeholder="Enter assembly full local path eg. 'c:\temp\Some.Assembly.dll'" />
-                <button id="analyze">Analyze</button>
-            </p>
+            <div id="progressArea">
+                Analyze:
+                <table>
+                    <tr>
+                        <td class="fieldName">Assembly file name:</td>
+                        <td><input id="assembly" type="text" placeholder="Enter assembly full local path eg. 'c:\temp\Some.Assembly.dll'" /></td>
+                    </tr>
+                    <tr>
+                        <td class="fieldName">Save results:</td>
+                        <td>
+                            <input id="save" type="checkbox"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <button id="analyze">Analyze</button><br/>
+                        </td>
+                    </tr>
+                </table>
+                <ul>
+                    <li>Assembly: <span id="loaded"></span></li>
+                    <li>Analyzes: <span id="message"></span></li>
+                    <li>Progress: <span id="progress"></span></li>
+                </ul>
+
+            </div>
+            <br/>
+            <div id="results">
+                Saved results:
+                <ul id="list">
+                </ul>
+            </div>
             <p>
                 Analyze the default assembly:
                 <button id="demo">Demo</button>
             </p>
-            <div id="progressArea">
-                <p>
-                    Assembly: <span id="loaded"></span><br/>
-                    Analyzes: <span id="message"></span><br/>
-                    Progress: <span id="progress"></span>
-                </p>
-            </div>
             <p>The page will be redirected automatically when dependency graph is complete.</p>
             <p>You can still <button id="goto" disabled="disabled">go to graph</button> anyway and see the incomplete dependency graph.</p>
             <p>The graph can be realoaded anytime by clicking (F5) and newly discovered dependencies will show up.</p>
