Simplified generation code. Encapsulated tree.js

--- a/nsplit/html/main.html
+++ b/nsplit/html/main.html
@@ -21,7 +21,7 @@
     <script src="js/lib/jquery.js"> </script> 
     <script src="js/lib/jstree.js"> </script>
     <script src="js/lib/jquery.panzoom.min.js"> </script>
-    <script src="js/main.js"> </script>
     <script src="js/vertex.js"> </script>
-
+    <script src="js/tree.js"> </script>
+    <script src="js/main.js"> </script>
 </html>
