Splited generation adn visualisation

--- a/nsplit/html/index.html
+++ b/nsplit/html/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
     <head>
-        <title>Code Gravity</title>
+        <title>Dependency Force Graph</title>
         <link rel="shortcut icon" href="/img/graph.ico" />
         <link href="css/index.css" rel="stylesheet" />
     </head>
@@ -10,37 +10,9 @@
                 This browser do not support SVG.<br/>
                 See: <a href="http://caniuse.com/svg">SVG browser compatibility table</a>
             </div>
-            <h3>Code Gravity</h3>
-            <div id="progressArea">
-                Analyze:
-                <table>
-                    <tr>
-                        <td class="fieldName">Assembly file name:</td>
-                        <td><input id="assembly" type="text" placeholder="Enter assembly full local path eg. 'c:\temp\Some.Assembly.dll'" /></td>
-                    </tr>
-                    <tr>
-                        <td class="fieldName">Save results:</td>
-                        <td>
-                            <input id="save" type="checkbox"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>
-                            <button id="analyze">Analyze</button><br/>
-                        </td>
-                    </tr>
-                </table>
-                <ul>
-                    <li>Assembly: <span id="loaded"></span></li>
-                    <li>Analyzes: <span id="message"></span></li>
-                    <li>Progress: <span id="progress"></span></li>
-                </ul>
-
-            </div>
-            <br/>
+            <h3>Dependency Force Graph</h3>
+            <h4>1. Select a dependency graph file:</h4>
             <div id="results">
-                Saved results:
                 <ul id="list">
                 </ul>
             </div>
@@ -48,17 +20,16 @@
                 Analyze the default assembly:
                 <button id="demo">Demo</button>
             </p>
-            <p>The page will be redirected automatically when dependency graph is complete.</p>
-            <p>You can still <button id="goto" disabled="disabled">go to graph</button> anyway and see the incomplete dependency graph.</p>
-            <p>The graph can be realoaded anytime by clicking (F5) and newly discovered dependencies will show up.</p>
-            <p>Use mouse wheel to zoom, drag surface to pan.</p>
-            <p>You can also:</p>
+            <h4>Play with id:</h4>
             <ul>
-                <li>mouse over nodes</li>
-                <li>click nodes</li>
-                <li>drag nodes</li>
-                <li>expand/collapse the tree</li>
-                <li>check/uncheck tree nodes</li>
+                <li>Mouse over nodes to see details</li>
+                <li>Click namespace nodes to burst them</li>
+                <li>Try to drag nodes</li>
+                <li>Expand/collapse the tree</li>
+                <li>Expand/collapse a subtree tree unding context menu</li>
+                <li>Check/uncheck tree nodes to highlight them on the graph</li>
+                <li>Use mouse wheel to zoom</li>
+                <li>Drag the surface to pan</li>
             </ul>
         </div>
     </body>
