--- a/nsplit/html/main.html
+++ b/nsplit/html/main.html
@@ -1,6 +1,6 @@
 ﻿<html>
     <head>
-        <title>Code Gravity</title>
+        <title>Dependency Force Graph</title>
         <link rel="shortcut icon" href="/img/graph.ico" />
         <link href="css/main.css" rel="stylesheet" />
         <link href="css/jstree/style.min.css" rel="stylesheet" />
